# Points

./: .gitignore  README.md  dimentions.py  images.py  pyproject.toml  requirements.txt  utils.py
SimpleP/Points/: dimentions.py
SimpleS/: detection.py
SimpleS/ImageRelated/: README.md  enhancements.py  requirements.txt
SimpleS/Points/: Triangle.py
